# haptik

./: .travis.yml  Cargo.toml  README.md
examples/: cli_sockets.rs  haproxy.cfg
src/: commands.rs  connection.rs  errors.rs  lib.rs  models.rs  parsers.rs  requests.rs  responses.rs
tests/: connection.rs
