[package]
name = "haptik"
version = "0.1.0"
authors = ["Austin Hartzheim <inbox@austinhartzheim.me>"]
edition = "2018"
keywords = [
    "haproxy",
    "proxy",
    "client",
    "socket",
]
license = "MIT/Apache-2.0"

[dependencies]

[badges]
travis-ci = { repository = "austinhartzheim/haptik" }
coveralls = { repository = "austinhartzheim/haptik", branch = "master", service = "github" }